// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AnswerPage/> renders as expected 1`] = `
<div
  className="answer-page-container"
>
  <h1
    className="pass-the-ball"
  >
    The word was:
  </h1>
  <p
    className="scrambled-word"
  />
  <div
    className="game-controls"
  >
    <a
      href="/end-game-page"
      onClick={[Function]}
    >
      <button
        className="game-end"
      >
        End Game
      </button>
    </a>
    <a
      href="/guess-the-word"
      onClick={[Function]}
    >
      <button
        className="next-button"
      >
        Next
      </button>
    </a>
  </div>
</div>
`;

exports[`<AnswerPage/> renders nothing when no props given 1`] = `
<div
  className="answer-page-container"
>
  <h1
    className="pass-the-ball"
  >
    The word was:
  </h1>
  <p
    className="scrambled-word"
  />
  <div
    className="game-controls"
  >
    <Link
      to="/end-game-page"
    >
      <button
        className="game-end"
      >
        End Game
      </button>
    </Link>
    <Link
      to="/guess-the-word"
    >
      <button
        className="next-button"
      >
        Next
      </button>
    </Link>
  </div>
</div>
`;

exports[`<AnswerPage/> renders with answer prop when given 1`] = `
<div
  className="answer-page-container"
>
  <h1
    className="pass-the-ball"
  >
    The word was:
  </h1>
  <p
    className="scrambled-word"
  >
    blue
  </p>
  <div
    className="game-controls"
  >
    <a
      href="/end-game-page"
      onClick={[Function]}
    >
      <button
        className="game-end"
      >
        End Game
      </button>
    </a>
    <a
      href="/guess-the-word"
      onClick={[Function]}
    >
      <button
        className="next-button"
      >
        Next
      </button>
    </a>
  </div>
</div>
`;
